Pending changes exported from your codespace

--- a/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
+++ b/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name '__file__' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     11\u001b[39m warnings.filterwarnings(\u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# Define BASE_DIR and adjust sys.path before importing\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m BASE_DIR = Path(\u001b[34;43m__file__\u001b[39;49m).resolve().parent.parent  \u001b[38;5;66;03m# Points to stat_656_autotrader/ from Notebooks/\u001b[39;00m\n\u001b[32m     15\u001b[39m sys.path.append(\u001b[38;5;28mstr\u001b[39m(BASE_DIR))\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProject root added to sys.path: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mBASE_DIR\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name '__file__' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project root added to sys.path: /workspaces/stat_656_autotrader\n"
      ]
     }
    ],
@@ -86,15 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total tickers fetched: 7460\n",
-      "First 20 tickers: ['PHI', 'GATX', 'PEY', 'REFR', 'HIHO', 'TY', 'TKR', 'VUZI', 'OFIX', 'NOMD', 'MPTI', 'ANTX', 'CASH', 'SEB', 'RMD', 'BEAT', 'PTY', 'CFBK', 'DYAI', 'GRC']\n"
+      "Error fetching tickers: request is not authorized\n",
+      "Total tickers fetched: 0\n",
+      "First 20 tickers: []\n"
      ]
     }
    ],
@@ -115,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching OHLC data from 2002-01-01 to 2025-03-29 (approx. 1260 trading days)\n"
+      "Fetching OHLC data from 2002-01-01 to 2025-04-06 (approx. 1260 trading days)\n"
      ]
     }
    ],
@@ -147,44 +144,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Alpaca Download Progress: 100%|██████████| 175/175 [02:49<00:00,  1.03it/s]"
+      "Alpaca Download Progress: 0it [00:00, ?it/s]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Fetched 276535 rows of stock data in 169.14 seconds.\n",
-      "Processed 175 tickers, missing 48 tickers, 48 tickers did not have enough time.\n",
-      "Processing time per ticker: 0.97 seconds.\n",
-      "\n",
-      "Fetched 276535 rows of historical OHLC data.\n",
-      "  ticker        date   open   high    low  close\n",
-      "0    PHI  2016-09-02  39.15  39.90  38.86  39.46\n",
-      "1    PHI  2016-09-06  39.48  39.48  38.35  38.62\n",
-      "2    PHI  2016-09-07  38.71  39.41  38.31  39.10\n",
-      "3    PHI  2016-09-08  39.49  39.85  39.32  39.81\n",
-      "4    PHI  2016-09-09  39.54  39.57  37.50  37.81\n",
-      "5    PHI  2016-09-12  37.53  37.90  37.38  37.56\n",
-      "6    PHI  2016-09-13  37.43  37.43  36.44  36.59\n",
-      "7    PHI  2016-09-14  36.73  37.66  36.73  36.86\n",
-      "8    PHI  2016-09-15  36.72  36.72  35.92  36.19\n",
-      "9    PHI  2016-09-16  35.82  35.82  34.86  35.05\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mZeroDivisionError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Use existing fetch utility for historical OHLC\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m historical_df = \u001b[43mfetch_alpaca_historical_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43malpaca\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubset_tickers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myears_back\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mFetched \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(historical_df)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m rows of historical OHLC data.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(historical_df.head(\u001b[32m10\u001b[39m))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/workspaces/stat_656_autotrader/src/utils/alpaca_utils.py:80\u001b[39m, in \u001b[36mfetch_alpaca_historical_data\u001b[39m\u001b[34m(alpaca_client, tickers, start_date, end_date, years_back)\u001b[39m\n\u001b[32m     77\u001b[39m         time.sleep(\u001b[32m1\u001b[39m)\n\u001b[32m     79\u001b[39m total_seconds = time.time() - start_time\n\u001b[32m---> \u001b[39m\u001b[32m80\u001b[39m seconds_per_ticker = \u001b[38;5;28mround\u001b[39m(\u001b[43mtotal_seconds\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtickers\u001b[49m\u001b[43m)\u001b[49m, \u001b[32m2\u001b[39m)\n\u001b[32m     81\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mFetched \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(alpaca_df)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m rows of stock data in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtotal_seconds\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m seconds.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     82\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProcessed \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprocessed_ticker_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m tickers, missing \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmissing_data_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m tickers, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     83\u001b[39m       \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_enough_time_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m tickers did not have enough time.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mZeroDivisionError\u001b[39m: float division by zero"
      ]
     }
    ],
@@ -205,39 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Alpaca Download Progress: 100%|██████████| 175/175 [03:20<00:00,  1.15s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Fetched 0 rows of stock data in 200.77 seconds.\n",
-      "Processed 175 tickers, missing 175 tickers, 0 tickers did not have enough time.\n",
-      "Processing time per ticker: 1.15 seconds.\n",
-      "\n",
-      "Fetched OHLC data for yesterday (2025-03-29):\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "yesterday = (datetime.now() - timedelta(days=1)).strftime(\"%Y-%m-%d\")\n",
     "\n",
@@ -256,35 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fetching Today's Open Prices: 100%|██████████| 175/175 [01:03<00:00,  2.75it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Today's Open Prices (2025-03-30):\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "today = datetime.now().strftime(\"%Y-%m-%d\")\n",
     "market_open_dt = pd.Timestamp(f\"{today}T09:30:00-05:00\")\n",
@@ -318,29 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Real-Time Latest Bars (Market Open):\n",
-      "  ticker        date     open     high      low    close  volume\n",
-      "0  AFRIW  2025-03-20    0.620    0.620    0.620    0.620    1300\n",
-      "1   AGMI  2025-02-25   27.550   27.550   27.550   27.550     100\n",
-      "2   AOMR  2025-03-28    9.560    9.560    9.560    9.560     100\n",
-      "3   ACGL  2025-03-28   95.050   95.070   95.020   95.040    2933\n",
-      "4   ACTG  2025-03-28    3.310    3.310    3.310    3.310     819\n",
-      "5    AER  2025-03-28  102.110  102.120  102.110  102.120    1549\n",
-      "6   ACIW  2025-03-28   54.250   54.250   54.250   54.250     248\n",
-      "7   GATX  2025-03-28  155.335  155.335  155.335  155.335     109\n",
-      "8    ADN  2025-03-26    4.960    4.960    4.960    4.960     100\n",
-      "9    AGD  2025-03-28    9.955    9.955    9.955    9.955     502\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "real_time_df = fetch_alpaca_latest_bars(alpaca, subset_tickers)\n",
     "\n",
@@ -357,20 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Processed 10 tickers in 0.05 seconds.\n",
-      "Average time per ticker: 0.01 sec.\n",
-      "Estimated time for all tickers: 0.64 mins.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple diagnostics\n",
     "def performance_summary(start_time, num_tickers):\n",
