--- a/Sandbox/test_notebook.ipynb
+++ b/Sandbox/test_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12678,7 +12678,168 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "from src.utils import get_alpaca_client, fetch_alpaca_stock_tickers, fetch_alpaca_historical_data, fetch_alpaca_latest_bars\n",
+    "from credentials import ALPACA_API_KEY, ALPACA_SECRET_KEY, ALPAKA_ENDPOINT_URL\n",
+    "\n",
+    "# Initialize Alpaca client\n",
+    "alpaca = get_alpaca_client()\n",
+    "\n",
+    "sys.path.append(r\"d:\\dev\\stat_656_autotrader\")\n",
+    "\n",
+    "from src.db_schema import DATABASES\n",
+    "from src.etl.populate_tickers import recreate_database, populate_tickers\n",
+    "from src.etl.populate_prices import ensure_prices_table, populate_prices\n",
+    "from src.utils.db_utils import fetch_all_asset_metadata, fetch_all_asset_prices\n",
+    "\n",
+    "class MCMCParameters:\n",
+    "    momentum_threshold: float = 0.20  # 20% upward momentum threshold\n",
+    "    n_simulations: int = 10000\n",
+    "    confidence_level: float = 0.95\n",
+    "    burn_in_period: int = 2000\n",
+    "    thinning_factor: int = 5\n",
+    "    \n",
+    "    def initialize_parameters(self) -> Dict:\n",
+    "        \"\"\"Initialize MCMC parameters for each stock\"\"\"\n",
+    "        return {\n",
+    "            'mu': np.random.normal(0, 0.1),\n",
+    "            'sigma': np.random.uniform(0.01, 0.1),\n",
+    "            'momentum': np.random.uniform(0, 0.5)\n",
+    "        }\n",
+    "    \n",
+    "    def calculate_momentum(self, prices: pd.Series) -> float:\n",
+    "        \"\"\"Calculate momentum score for a stock\"\"\"\n",
+    "        returns = prices.pct_change().dropna()\n",
+    "        momentum = returns.rolling(window=20).mean().iloc[-1]\n",
+    "        return momentum\n",
+    "\n",
+    "class StockMCMC:\n",
+    "    def __init__(self, params: MCMCParameters):\n",
+    "        self.params = params\n",
+    "        self.stock_data = {}\n",
+    "        \n",
+    "    def initialize_chain(self, stock_data: Dict[str, pd.Series]) -> None:\n",
+    "        \"\"\"Initialize MCMC chain for all stocks\"\"\"\n",
+    "        self.stock_data = stock_data\n",
+    "        self.chains = {}\n",
+    "        for symbol, prices in stock_data.items():\n",
+    "            self.chains[symbol] = self.params.initialize_parameters()\n",
+    "    \n",
+    "    def calculate_log_posterior(self, symbol: str, params: Dict) -> float:\n",
+    "        \"\"\"Calculate log posterior probability for a stock\"\"\"\n",
+    "        prices = self.stock_data[symbol]\n",
+    "        momentum = self.calculate_momentum(prices)\n",
+    "        \n",
+    "        # Prior distribution\n",
+    "        log_prior = np.log(np.random.beta(2, 5))  # Weak prior for momentum\n",
+    "        \n",
+    "        # Likelihood\n",
+    "        log_likelihood = np.sum(\n",
+    "            np.log(self._likelihood(params['mu'], params['sigma'], prices))\n",
+    "        )\n",
+    "        \n",
+    "        return log_prior + log_likelihood\n",
+    "    \n",
+    "    def _likelihood(self, mu: float, sigma: float, prices: pd.Series) -> np.ndarray:\n",
+    "        \"\"\"Calculate likelihood for normal distribution\"\"\"\n",
+    "        returns = prices.pct_change().dropna()\n",
+    "        return np.exp(-0.5 * ((returns - mu) / sigma) ** 2) / (sigma * np.sqrt(2 * np.pi))\n",
+    "    \n",
+    "    def sample(self, symbol: str) -> Dict:\n",
+    "        \"\"\"Perform one MCMC step for a stock\"\"\"\n",
+    "        current_params = self.chains[symbol]\n",
+    "        proposed_params = self._propose_parameters(current_params)\n",
+    "        \n",
+    "        current_log_posterior = self.calculate_log_posterior(symbol, current_params)\n",
+    "        proposed_log_posterior = self.calculate_log_posterior(symbol, proposed_params)\n",
+    "        \n",
+    "        log_alpha = proposed_log_posterior - current_log_posterior\n",
+    "        if np.log(np.random.random()) < log_alpha:\n",
+    "            self.chains[symbol] = proposed_params\n",
+    "            \n",
+    "        return self.chains[symbol]\n",
+    "    \n",
+    "    def _propose_parameters(self, current_params: Dict) -> Dict:\n",
+    "        \"\"\"Propose new parameters using random walk\"\"\"\n",
+    "        proposed = current_params.copy()\n",
+    "        proposed['mu'] += np.random.normal(0, 0.01)\n",
+    "        proposed['sigma'] += np.random.uniform(-0.001, 0.001)\n",
+    "        proposed['momentum'] += np.random.uniform(-0.01, 0.01)\n",
+    "        return proposed\n",
+    "    \n",
+    "    def run_chain(self, symbol: str) -> List[Dict]:\n",
+    "        \"\"\"Run MCMC chain for a single stock\"\"\"\n",
+    "        chain = []\n",
+    "        for _ in range(self.params.n_simulations):\n",
+    "            params = self.sample(symbol)\n",
+    "            if _ > self.params.burn_in_period and _ % self.params.thinning_factor == 0:\n",
+    "                chain.append(params)\n",
+    "        return chain\n",
+    "\n",
+    "class StockAnalyzer:\n",
+    "    def __init__(self, mcmc: StockMCMC):\n",
+    "        self.mcmc = mcmc\n",
+    "        self.top_stocks = []\n",
+    "    \n",
+    "    def analyze_stocks(self) -> List[Tuple[str, float]]:\n",
+    "        \"\"\"Analyze all stocks and return top momentum stocks\"\"\"\n",
+    "        results = []\n",
+    "        for symbol in self.mcmc.stock_data.keys():\n",
+    "            chain = self.mcmc.run_chain(symbol)\n",
+    "            momentum_scores = [params['momentum'] for params in chain]\n",
+    "            avg_momentum = np.mean(momentum_scores)\n",
+    "            if avg_momentum >= self.mcmc.params.momentum_threshold:\n",
+    "                results.append((symbol, avg_momentum))\n",
+    "        \n",
+    "        self.top_stocks = sorted(results, key=lambda x: x[1], reverse=True)[:20]\n",
+    "        return self.top_stocks\n",
+    "    \n",
+    "    def get_momentum_scores(self) -> pd.DataFrame:\n",
+    "        \"\"\"Return momentum scores as a DataFrame\"\"\"\n",
+    "        scores = []\n",
+    "        for symbol, momentum in self.top_stocks:\n",
+    "            scores.append({\n",
+    "                'symbol': symbol,\n",
+    "                'momentum_score': momentum,\n",
+    "                'confidence_interval': self._calculate_confidence_interval(symbol)\n",
+    "            })\n",
+    "        return pd.DataFrame(scores)\n",
+    "    \n",
+    "    def _calculate_confidence_interval(self, symbol: str) -> Tuple[float, float]:\n",
+    "        \"\"\"Calculate confidence interval for a stock's momentum\"\"\"\n",
+    "        chain = self.mcmc.run_chain(symbol)\n",
+    "        momentum_scores = [params['momentum'] for params in chain]\n",
+    "        ci = np.percentile(momentum_scores, \n",
+    "                          [(1 - self.mcmc.params.confidence_level)/2 * 100, \n",
+    "                           (1 + self.mcmc.params.confidence_level)/2 * 100])\n",
+    "        return tuple(ci)\n",
+    "\n",
+    "def main():\n",
+    "    # Initialize components\n",
+    "    params = MCMCParameters()\n",
+    "    mcmc = StockMCMC(params)\n",
+    "    analyzer = StockAnalyzer(mcmc)\n",
+    "    \n",
+    "    # Fetch and prepare data\n",
+    "    tickers = fetch_alpaca_stock_tickers()\n",
+    "    stock_data = fetch_alpaca_historical_data(tickers)\n",
+    "    \n",
+    "    # Run analysis\n",
+    "    mcmc.initialize_chain(stock_data)\n",
+    "    top_stocks = analyzer.analyze_stocks()\n",
+    "    \n",
+    "    # Get results\n",
+    "    results_df = analyzer.get_momentum_scores()\n",
+    "    print(\"\\nTop 20 Stocks with Momentum Scores:\")\n",
+    "    print(results_df)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
